feat: fixing email verification 5

--- a/src/utils/mail/templates/registration-success.ejs
+++ b/src/utils/mail/templates/registration-success.ejs
@@ -60,19 +60,19 @@
             <h1>Selamat datang!</h1>
         </div>
         <div class="content">
-            <p>Halo &lt;%= username%&gt;, </p>
+            <p>Halo <%= username%>, </p>
             <p>
                 Terima kasih telah mendaftar di E-Learning. Berikut adalah informasi dari akun anda:
             </p>
             <ul>
-                <li><strong>Nama: </strong>&lt;%= fullName %&gt;</li>
-                <li><strong>Email: </strong>&lt;%= email %&gt;</li>
-                <li><strong>Tanggal Pendaftaran: </strong>&lt;%= createdAt %&gt;</li>
+                <li><strong>Nama: </strong><%= fullName %></li>
+                <li><strong>Email: </strong><%= email %></li>
+                <li><strong>Tanggal Pendaftaran: </strong><%= createdAt %></li>
             </ul>
             <p>
                 Untuk memulai, silahkan klik tombol dibawah ini: 
             </p>
-            <a href="&lt;%= activationLink %&gt;" class="button">Aktifkan Akun</a>
+            <a href="<%= activationLink %>" class="button">Aktifkan Akun</a>
             <p>
                 Jika Anda memiliki pertanyaan, jangan ragu untuk menghubungi kami.
             </p>
