--- a/src/utils/mail/templates/registration-success.html
+++ b/src/utils/mail/templates/registration-success.html
@@ -39,14 +39,11 @@
             display: inline-block;
             padding: 10px 20px;
             margin: 20px 0;
-            color: #ffffff !important;
+            color: #ffffff;
             text-decoration: none;
             border-radius: 5px;
             border: 1px solid #1e65f1;
             background-color: #1e65f1;
-        }
-        .button:hover {
-            color: #ffffff !important; 
         }
         @media (max-width: 600px) {
             .container {
